tests/baselines/reference/unicodeExtendedEscapesInTemplates17_ES5.errors.txt
tests/cases/conformance/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInTemplates17_ES5.ts(2,13): error TS1125: Hexadecimal digit expected.
tests/cases/conformance/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInTemplates17_ES5.ts(2,18): error TS1125: Hexadecimal digit expected.
tests/cases/conformance/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInTemplates17_ES5.ts(2,23): error TS1125: Hexadecimal digit expected.


==== tests/cases/conformance/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInTemplates17_ES5.ts (3 errors) ====
    
    var x = `\u{r}\u{n}\u{t}`;
                
!!! error TS1125: Hexadecimal digit expected.
                     
!!! error TS1125: Hexadecimal digit expected.
                          
!!! error TS1125: Hexadecimal digit expected.
    